# rtb-runtime

./: .gitignore  .gitmodules  Cargo.toml  PROTOBUF_COMPROMISES.md  README.md  build.rs
examples/: adcom_spec_usage.rs  app_fields.rs  basic_usage.rs  builder_example.rs  custom_extensions.rs  custom_spec_list.rs  distribution_channels.rs  ext_builder_usage.rs  json_test.rs  macros_usage.rs  nobidreason_usage.rs  server_usage.rs  video_placement_migration.rs
src/: lib.rs  macros.rs
src/adcom/spec/: agent_types.rs  api_frameworks.rs  audit_status_codes.rs  auto_refresh_triggers.rs  category_taxonomies.rs  click_types.rs  companion_types.rs  connection_types.rs  content_contexts.rs  creative_attributes.rs  creative_subtypes_audio_video.rs  creative_subtypes_display.rs  delivery_methods.rs  devicetype.rs  display_context_types.rs  display_placement_types.rs  dooh_multiplier_measurement_source_types.rs  dooh_venue_taxonomies.rs  event_tracking_methods.rs  event_types.rs  expandable_directions.rs  feed_types.rs  id_match_methods.rs  ip_location_services.rs  linearity_modes.rs  location_types.rs  media_ratings.rs  mod.rs  native_data_asset_types.rs  native_image_asset_types.rs  operating_systems.rs  placement_positions.rs  playback_cessation_modes.rs  playback_methods.rs  pod_deduplication_settings.rs  pod_sequence.rs  production_qualities.rs  size_units.rs  slot_position_in_pod.rs  start_delay_modes.rs  (+3 more)
src/common/: bidresponsestate.rs  dataurl.rs  mod.rs  utils.rs
src/compat/: README.md  bool_as_int.rs  extensions.rs  mod.rs
src/json/: bool_as_int.rs  mod.rs  openrtb_json.rs
src/observability/: macros.rs  mod.rs
src/openrtb/: mod.rs
src/openrtb/spec/: auction_macros.rs  devicetype.rs  lossreason.rs  mod.rs  nobidreason.rs  video_placement_types.rs
src/openrtb/utils/: adformats.rs  adm.rs  mod.rs  pixels.rs
src/openrtb/utils/trackers/: mod.rs  pixels.rs  vast.rs
src/server/: json.rs  mod.rs  protobuf.rs  server.rs
src/server/extractors/: mod.rs  protobuf.rs
test_data/: sample_bid_request.json
tests/: extensions_integration.rs  server_tests.rs  spec_list_macro_test.rs
