[package]
name = "openrtb-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.14"
pbjson = "0.8"
pbjson-types = "0.8"  # Provides serde for google.protobuf.Value
tonic = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derive_builder = "0.20"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
tonic-prost-build = "0.14"
pbjson-build = "0.8"
protoc-bin-vendored = "3"
prost-types = "0.14"
prost = "0.14"
heck = "0.5"
