[package]
name = "rtb-runtime"
version = "0.1.0"
edition = "2024"

[lib]
name = "rtb"

[features]
default = ["actix-web"]
actix-web = ["dep:actix-web", "dep:rustls", "dep:rcgen", "dep:rustls-pemfile", "dep:futures-util", "dep:libdeflater"]
tracing = ["dep:tracing"]
simd-json = ["dep:simd-json"]

[[example]]
name = "server_usage"
required-features = ["actix-web"]

[dependencies]
prost = "0.14"
pbjson = "0.8"
pbjson-types = "0.8"  # Provides serde for google.protobuf.Value
derive_builder = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = { version = "4.11.0", features = ["rustls-0_23"], optional = true }
rustls = { version = "0.23.32", default-features = false, features = ["ring"], optional = true }
rcgen = { version = "0.14.5", optional = true }
rustls-pemfile = { version = "2.2.0", optional = true }
futures-util = { version = "0.3.31", optional = true }
tracing = { version = "0.1.41", optional = true }
simd-json = { version = "0.13", optional = true }
libdeflater = { version = "1.23", optional = true }
memchr = "2.7.6"
strum = { version = "0.27.2", features = ["derive"] }
quick-xml = "0.38.3"
anyhow = "1.0.100"
url = "2.5.7"

[dev-dependencies]
actix-rt = "2.11.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip"] }
flate2 = "1.0"

[build-dependencies]
prost-build = "0.14"
pbjson-build = "0.8"
protoc-bin-vendored = "3"
prost-types = "0.14"
prost = "0.14"
heck = "0.5"
